<resources>
    <string name="app_name" translatable="false">SportNew</string>
    <string name="Search">Search</string>
    <string name="Filters">Filters</string>
    <string name="NO">NO</string>
    <string name="YES">YES</string>
    <string name="player_to_scouts">Add player to scouts</string>
    <string name="delete_scouted_players_list_question">Are you sure you want to delete the scouted players list?</string>
    <string name="delete_scouted_players_list_title">Delete the scouted players list</string>
    <string name="get_scouts">Go to Scouts</string>
    <string name="get_results">Get Results</string>
    <string name="get_players">Get Players</string>
    <string name="title_scouts">Favourites Players</string>
    <string name="title_search_players">Players</string>
    <string name="title_search_results">Results</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="language">Language</string>
    <string name="select_language">Select language</string>
    <string name="language_spanish">Spanish (Español)</string>
    <string name="language_english">English</string>
    <string name="language_italian">Italian (Italiano)</string>
    <string name="night_mode_disabled">Night mode disabled</string>
    <string name="night_mode_activated">Night mode activated</string>
    <string name="sport_football">Soccer</string>
    <string name="sport_NFL">American Football</string>
    <string name="sport_basketball">Basketball</string>
    <string name="base_url" translatable="false">https://www.thesportsdb.com/api/v1/json/3/</string>
    <string name="network_error">Network error. Please check your connection.</string>
    <string name="invalid_input_error">Please enter a valid player name</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="no_players_found">No players found matching your search</string>
    <string name="select_sports">Select sports</string>
    <string name="ice_hockey">Ice Hockey</string>
    <string name="player_name">Player\'s name:</string>
    <string name="player_name_team">Player\'s team:</string>
    <string name="player_sport">Sport:</string>
    <string name="player_nationality">Nationality:</string>
    <string name="player_date_born">Birthdate:</string>
    <string name="player_status">Status:</string>
    <string name="player_gender">Gender:</string>
    <string name="player_position">Position:</string>
    <string name="return_button_description">Button that takes you to the source window</string>
    <string name="error_loading_player">Error loading player</string>
    <string name="search_results">Search Results</string>
    <string name="no_events_found">No event found, try with another one.</string>
    <string name="season_choice">Choose the season:</string>
    <string name="league_choice">Choose the sport/league:</string>
    <string name="button_eye">Button to save a player to the \"Scouted Players\" database. It also serves to remove a player from the database.</string>
    <string name="player_removed_from_scouts">Player removed from scouts</string>
    <string name="player_profile">Player profile</string>
    <string name="round">Choose the round:</string>
    <string name="event_logo" translatable="false">Event Logo</string>
</resources>