<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/teal_200"
        android:elevation="4dp"
        android:fitsSystemWindows="true">

        <ImageButton
            android:id="@+id/btn_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/retrun"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="start"
            android:contentDescription="@string/back"
            android:minWidth="58dp"
            android:minHeight="58dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_profile"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.Toolbar>



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:fillViewport="true"
        android:id="@+id/scrollViewProfile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="60dp"
            app:cardElevation="4dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imgPlayer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/no_players_found" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/player_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:layout_gravity="center" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/player_team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_name_team"
                    android:textSize="16sp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/player_sport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_sport"
                    android:textSize="16sp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/player_nationality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_nationality"
                    android:textSize="16sp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/player_date_born"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_date_born"
                    android:textSize="16sp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/player_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_status"
                    android:textSize="16sp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/player_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_gender"
                    android:textSize="16sp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/player_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_position"
                    android:textSize="16sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_eye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/button_eye"
        android:src="@drawable/eye_open"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>