<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/labelLeague"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/league_choice"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinnerLeague"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/labelSeason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/season_choice"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/spinnerSeason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/labelRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/round"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="16dp"
        android:visibility="gone"/>

    <Spinner
        android:id="@+id/spinnerRound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"/>

</LinearLayout>