<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.player.ScoutsActivity">

    <!-- Barra superior -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/teal_200"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/settings"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="end"
            android:contentDescription="@string/settings"
            android:minWidth="58dp"
            android:minHeight="58dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_scouts"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <!-- RecyclerView para mostrar los jugadores -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvScoutedPlayers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/bottomNavBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Barra de navegación inferior -->
    <LinearLayout
        android:id="@+id/bottomNavBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:background="@color/teal_200"
        android:padding="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:padding="8dp">

            <ImageButton
                android:id="@+id/btn_trophy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/trophy"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/get_results"
                android:layout_gravity="center"
                android:minWidth="48dp"
                android:minHeight="48dp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:padding="8dp">

            <ImageButton
                android:id="@+id/btn_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/player"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/get_players"
                android:layout_gravity="center"
                android:minWidth="48dp"
                android:minHeight="48dp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:padding="8dp">

            <ImageButton
                android:id="@+id/btn_eye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/eye_open"
                android:background="@color/teal_700"
                android:contentDescription="@string/get_scouts"
                android:layout_gravity="center"
                android:minWidth="48dp"
                android:minHeight="48dp"/>
        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>